--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "license": "MIT",
     "dependencies": {
         "@fullhuman/postcss-purgecss": "^4.0.3",
+        "algoliasearch": "^4.17.0",
         "concurrently": "^6.0.0",
         "cssnano": "^5.0.8",
         "cypress": "^4.11.0",
         "glob": "^7.2.0",
+        "jsdom": "^22.0.0",
         "js-yaml": "^3.13.1",
         "markdownlint": "^0.28.0",
-        "@octokit/auth-action": "^1.3.2",
-        "@octokit/graphql": "^4.6.2",
-        "@octokit/rest": "^18.5.3",
         "postcss": "^8.3.7",
         "postcss-cli": "^8.3.1"
     },
